# cov-example

./: pyproject.toml
.github/workflows/: test.yml
app/: calculator.py
tests/: test_calculator.py  test_calculator_new.py
