[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Ayal Regev <ayal@redefine.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ipython = "^8.25.0"
ipdb = "^0.13.13"
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
coverage = {extras = ["toml"], version = "^7.5.3"}
diff-cover = "^9.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
